--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "i18next": "^21.8.14",
-    "i18next-chained-backend": "^3.0.2",
-    "i18next-http-backend": "^1.4.1",
-    "i18next-resources-to-backend": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.3",
@@ -20,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build_copy_lang_files": "webpack --mode=production --config=webpack.copy-lang-files.config.js",
+    "build_copy_lang_files": "webpack --mode=production --config=webpack.add-timestamp.config.js",
     "build": "npm run build_copy_lang_files && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -48,10 +45,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.3.0",
-    "copy-webpack-plugin": "^11.0.0",
     "jest": "^28.1.3",
     "replace-in-file-webpack-plugin": "^1.0.6",
-    "rewire": "^6.0.0",
     "webpack-cli": "^4.10.0"
   }
 }
