--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "build_copy_lang_files": "webpack --mode=production --config=webpack.add-timestamp.config.js",
     "build": "npm run build_copy_lang_files && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "test2": "jest --watchAll"
+    "test:ci": "npm run test -- --watchAll=false --reporters=default --reporters=jest-junit",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -46,7 +46,17 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.3.0",
     "jest": "^28.1.3",
+    "jest-junit": "^14.0.0",
     "replace-in-file-webpack-plugin": "^1.0.6",
     "webpack-cli": "^4.10.0"
+  },
+  "jest-junit": {
+    "suiteName": "jest tests",
+    "outputDirectory": ".",
+    "outputName": "./build/reports/junit.xml",
+    "classNameTemplate": "{classname}-{title}",
+    "titleTemplate": "{classname}-{title}",
+    "ancestorSeparator": " › ",
+    "usePathForSuiteName": "true"
   }
 }
