--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,20 @@ steps:
     npm run build
   displayName: 'npm build'
 
+- task: Npm@1
+  displayName: npm run test
+  condition: succeeded()
+  inputs:
+    command: 'custom'
+    workingDir: 'src/client-app'
+    customCommand: 'run test:ci'
+
+- task: PublishTestResults@2
+  displayName: 'supply npm test results to pipelines'
+  condition: succeededOrFailed()
+  inputs:
+    testResultsFiles: 'build/reports/junit.xml'
+
 - task: ArchiveFiles@2
   inputs:
     rootFolderOrFile: '$(Build.SourcesDirectory)/build'
@@ -40,4 +54,3 @@ steps:
   displayName: 'Publish Build Artifacts'
   inputs: 
     pathtoPublish: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-
