--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-i18next": "^11.18.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
@@ -20,7 +20,7 @@
     "build_copy_lang_files": "webpack --mode=production --config=webpack.add-timestamp.config.js",
     "build": "npm run build_copy_lang_files && react-scripts build",
     "test": "react-scripts test",
-    "test:ci": "npm run test -- --watchAll=false --reporters=default --reporters=jest-junit",
+    "test:ci": "npm run test -- --watchAll=false --reporters=default --reporters=jest-junit --code-coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
