--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,11 +42,12 @@ steps:
   inputs:
     testResultsFiles: 'build/reports/junit.xml'
 
+
 - task: PublishCodeCoverageResults@1
   displayName: 'Publish code coverage'
   inputs:
     codeCoverageTool: Cobertura
-    summaryFileLocation: '$(Build.SourcesDirectory)/**/*cobertura-coverage.xml'
+    summaryFileLocation: '$(System.SourcesDirectory)/coverage/cobertura-coverage.xml'
 
 - task: ArchiveFiles@2
   inputs:
