--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,50 +14,66 @@ pr:
 pool:
   vmImage: 'windows-latest'
 
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '16.x'
-  displayName: 'Install Node.js'
 
-- script: |
-    npm install
-  displayName: 'npm install'
+stages:
+- stage: CI
+  jobs:
+  - job: Build
+    displayName: Build
+    steps:
+    - task: NodeTool@0
+      inputs:
+        versionSpec: '16.x'
+      displayName: 'Install Node.js'
 
-- script: |
-    npm run build
-  displayName: 'npm build'
+    - script: |
+        npm install
+      displayName: 'npm install'
 
-- task: Npm@1
-  displayName: npm run test
-  condition: succeeded()
-  inputs:
-    command: 'custom'
-    # workingDir: ''
-    customCommand: 'run test:ci'
+    - script: |
+        npm run build
+      displayName: 'npm build'
 
-- task: PublishTestResults@2
-  displayName: 'supply npm test results to pipelines'
-  condition: succeededOrFailed()
-  inputs:
-    testResultsFiles: '$(System.DefaultWorkingDirectory)/build/reports/junit.xml'
+  - job: Testing
+    displayName: Unit Testing
+    dependsOn: Build
+    condition: succeeded()
+    steps:
 
+    - task: Npm@1
+      displayName: npm run test
+      condition: succeeded()
+      inputs:
+        command: 'custom'
+        customCommand: 'run test:ci'
 
-- task: PublishCodeCoverageResults@1
-  displayName: 'Publish code coverage'
-  inputs:
-    codeCoverageTool: Cobertura
-    summaryFileLocation: '$(System.DefaultWorkingDirectory)/coverage/cobertura-coverage.xml'
+    - task: PublishTestResults@2
+      displayName: 'supply npm test results to pipelines'
+      condition: succeededOrFailed()
+      inputs:
+        testResultsFiles: '$(System.DefaultWorkingDirectory)/build/reports/junit.xml'
 
-- task: ArchiveFiles@2
-  inputs:
-    rootFolderOrFile: '$(System.DefaultWorkingDirectory)/build'
-    includeRootFolder: true
-    archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-    replaceExistingArchive: true
+    - task: PublishCodeCoverageResults@1
+      displayName: 'Publish code coverage'
+      inputs:
+        codeCoverageTool: Cobertura
+        summaryFileLocation: '$(System.DefaultWorkingDirectory)/coverage/cobertura-coverage.xml'
 
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish Build Artifacts'
-  inputs: 
-    pathtoPublish: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+  - job: Publish
+    displayName: Publish Artifacts
+    dependsOn: Testing
+    condition: succeeded()
+    steps:
+    - task: ArchiveFiles@2
+      displayName: Archive Build Files
+      inputs:
+        rootFolderOrFile: '$(System.DefaultWorkingDirectory)/build'
+        includeRootFolder: true
+        archiveType: 'zip'
+        archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+        replaceExistingArchive: true
+
+    - task: PublishBuildArtifacts@1
+      displayName: 'Publish Build Artifacts'
+      inputs: 
+        pathtoPublish: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
