Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,8 +20,8 @@ stages:
 
   jobs:
 
-  - job: Build & Test & Publish Artifacts
-    displayName: Build
+  - job: Build_Test_Publish
+    displayName: Build & Test & Publish Artifacts
     steps:
     - task: NodeTool@0
       inputs:
