--- a/public/app.json
+++ b/public/app.json
@@ -1,5 +1,5 @@
 {
-    "apiEndpoint": "http://localhost:5000",
+    "apiEndpoint": "http://API_HOST:5000",
     "apiVersion": "api/v1.0",
-    "buildTimeStamp": "1659338405529"
+    "buildTimeStamp": ""
 }
