--- a/httpd.conf
+++ b/httpd.conf
@@ -512,6 +512,14 @@ ErrorDocument 404 "/error"
   ErrorDocument 404 "File not found"
 </Files>
 
+<Directory /usr/local/apache2/htdocs/app.json>
+  Header Set Pragma "no-cache"
+  Header Set Expires "Thu, 1 Jan 1970 00:00:00 GMT"
+  Header Set Cache-Control "max-age=0, no-store, no-cache, must-revalidate"
+  Header Unset ETag
+  FileETag None
+</Directory>
+
 # Recommended by Ember's guide at https://guides.emberjs.com/release/tutorial/deploying/#toc_servers
 # But we're exploring the use of FallbackResource above
 # <IfModule mod_rewrite>
